# polyserde

./: LICENSE  README.md  pyproject.toml
polyserde/: __init__.py  polyserde.py
tests/: __init__.py  conftest.py  test_basic_serialization.py  test_class_references.py  test_complex_dicts.py  test_edge_cases.py  test_enums.py  test_integration.py  test_polymorphic.py  test_pydantic_models.py  test_versioning.py
